# Livox-SDK

./: CMakeLists.txt  LICENSE.txt  README.md  build.sh
sample/python/: CMakeLists.txt  lvx_file.cpp  lvx_if.cpp  pybind11
sdk_core/src/: device_manager.cpp
sdk_core/src/command_handler/: command_channel.cpp  command_handler.cpp
